@startuml
package "authz.core" {
 class PolicyDecisionPoint
 class Decision
 interface AttributeResolver
  class AttributeResolverChain
 }
 package "authz.pdp" {
  class OpaPolicyDecisionPoint
 }
 package "authz.pep" {
  class AbacAuthorizationManager
 }
 package "authz.attr" {
  class JwtClaimsAttributeResolver
  class ResourceParamAttributeResolver
  class ResourceDbAttributeResolver
 }
 PolicyDecisionPoint <|.. OpaPolicyDecisionPoint
 AttributeResolverChain o-- AttributeResolver
 AbacAuthorizationManager ..> PolicyDecisionPoint
 AbacAuthorizationManager ..> AttributeResolverChain
 @enduml